# PSE-VHDL-XTEA_FMI-Virtual-platform

./: README.md
2.1_Synthesis/Report/: VR436747_Vladislav_Bragoi_2.1.tex  biblio.bib
2.1_Synthesis/Solutions/HLS_model/: xtea.cpp
2.1_Synthesis/Solutions/Results/sintesi/report/: csynth.xml  xtea_csynth.rpt
2.1_Synthesis/Solutions/Results/sintesi/systemc/: xtea.cpp  xtea.h
2.1_Synthesis/Solutions/Results/sintesi/verilog/: xtea.v
2.1_Synthesis/Solutions/Results/sintesi/vhdl/: xtea.vhd
2.1_Synthesis/Solutions/VHDL_behavioral_implementation/: stimuli.do  vsim.wlf  xtea.vhd
2.2_FMI/Report/: VR436747_Vladislav_Bragoi_2.2.tex  biblio.bib
2.2_FMI/Solution/: README
2.2_FMI/Solution/c_controller/: compile.sh  controller.c
2.2_FMI/Solution/coordinator/: coordinator.py
2.2_FMI/Solution/coordinator/roms/: rom.mem
2.2_FMI/Solution/models/gain/cpp/: CMakeLists.txt
2.2_FMI/Solution/models/gain/cpp/src/: fmuInterface.cc
2.2_FMI/Solution/models/gain/fmu/: Makefile
2.2_FMI/Solution/models/m6502/: Makefile
2.2_FMI/Solution/models/m6502/verilog/: add4rpl.v  adh_mux.v  m6502.v  prog_cnt.v  rg8l.v
2.2_FMI/fmi_lesson/coordinator/: constants.py
2.2_FMI/fmi_lesson/coordinator/fmus/: Sine_1.fmu  Sine_2.fmu  Sine_3.fmu  accelerometer.fmu  gain.fmu  m6502.fmu  memory.fmu
2.2_FMI/fmi_lesson/models/accelerometer/: Makefile
2.2_FMI/fmi_lesson/models/accelerometer/verilog-a/: accelerometer.va
2.2_FMI/fmi_lesson/models/gain/fmu/: modelDescription.xml
2.2_FMI/fmi_lesson/models/m6502/verilog/: addsub8.v  adl_mux.v  (+8 more)
2.2_FMI/fmi_lesson/models/memory/: Makefile
(+2 files in other folders)
